--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -14,6 +14,7 @@
 @import "./utils/loaderSpinner.scss";
 @import "userList.scss";
 @import "userModal.scss";
+@import "promosAdmin.scss";
 
 * {
     margin: 0;
