--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -14,7 +14,7 @@
 @import "./utils/loaderSpinner.scss";
 @import "userList.scss";
 @import "userModal.scss";
-@import "promosAdmin.scss";
+@import "./promosAdmin";
 
 * {
     margin: 0;
